--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -1,8 +1,8 @@
 buildscript {
     repositories {
-      maven {
-        url "https://plugins.gradle.org/m2/"
-      }
+      maven { url 'https://repo.spring.io/milestone' }
+      maven { url "https://plugins.gradle.org/m2/"}
+
       mavenCentral()
     }
     dependencies {
@@ -44,5 +44,12 @@ repositories {
     dependencies {
     compile("org.springframework.boot:spring-boot-starter-web") 
     testCompile("org.springframework.boot:spring-boot-starter-test")
+
+    //compile ("org.springframework.boot:spring-boot-starter-data-jpa")
+    //compile ("org.springframework.boot:spring-boot-starter-validation")
+    //compile ("org.springframework.data:spring-data-jpa:2.1.6.RELEASE")
+    //compile ("org.springframework.boot:spring-boot-starter-data-jpa:2.1.3.RELEASE")
+    //compile ("com.h2database:h2:1.4.197")
+
 }
 
