--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -44,6 +44,13 @@ repositories {
     dependencies {
     compile("org.springframework.boot:spring-boot-starter-web") 
     testCompile("org.springframework.boot:spring-boot-starter-test")
+        /*
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+        runtimeOnly 'com.h2database:h2'
+        testImplementation('org.springframework.boot:spring-boot-starter-test') {
+            exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+        }*/
+
 
     //compile ("org.springframework.boot:spring-boot-starter-data-jpa")
     //compile ("org.springframework.boot:spring-boot-starter-validation")
