--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -44,19 +44,14 @@ repositories {
     dependencies {
     compile("org.springframework.boot:spring-boot-starter-web") 
     testCompile("org.springframework.boot:spring-boot-starter-test")
-        /*
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-        runtimeOnly 'com.h2database:h2'
-        testImplementation('org.springframework.boot:spring-boot-starter-test') {
-            exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-        }*/
 
-
-    //compile ("org.springframework.boot:spring-boot-starter-data-jpa")
-    //compile ("org.springframework.boot:spring-boot-starter-validation")
-    //compile ("org.springframework.data:spring-data-jpa:2.1.6.RELEASE")
-    //compile ("org.springframework.boot:spring-boot-starter-data-jpa:2.1.3.RELEASE")
-    //compile ("com.h2database:h2:1.4.197")
+    //compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    //compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    //compile("com.h2database:h2")
+    compile ("org.springframework.boot:spring-boot-starter-validation")
+    compile ("org.springframework.data:spring-data-jpa:2.1.6.RELEASE")
+    compile ("org.springframework.boot:spring-boot-starter-data-jpa:2.1.3.RELEASE")
+    compile ("com.h2database:h2:1.4.197")
 
 }
 
