--- a/complete/src/main/resources/application.properties
+++ b/complete/src/main/resources/application.properties
@@ -9,10 +9,10 @@ endpoints.restart.enabled=true
 endpoints.shutdown.enabled=true
 
 
-dataSource.driverClassName=org.h2.Driver
-dataSource.username=sa
-dataSource.password=sa
-dataSource.dbCreate=update
-dataSource.loggingSql=true
-dataSource.logSql=true
-dataSource.url= jdbc:h2:mem:testDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+#dataSource.driverClassName=org.h2.Driver
+#dataSource.username=sa
+#dataSource.password=sa
+#dataSource.dbCreate=update
+#dataSource.loggingSql=true
+#dataSource.logSql=true
+#dataSource.url= jdbc:h2:mem:testDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
