--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     repositories {
       maven { url 'https://repo.spring.io/milestone' }
       maven { url "https://plugins.gradle.org/m2/"}
+      maven { url "https://jcenter.bintray.com" }
 
       mavenCentral()
     }
@@ -41,7 +42,17 @@ repositories {
     //options.compilerArgs += ['-parameters', '-g']
 //}
 
+//Pel lombok
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
     dependencies {
+
+
+
     compile("org.springframework.boot:spring-boot-starter-web") 
     testCompile("org.springframework.boot:spring-boot-starter-test")
 
@@ -52,6 +63,9 @@ repositories {
     compile ("org.springframework.data:spring-data-jpa:2.1.6.RELEASE")
     compile ("org.springframework.boot:spring-boot-starter-data-jpa:2.1.3.RELEASE")
     compile ("com.h2database:h2:1.4.197")
+
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
 
 }
 
