--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -52,7 +52,8 @@ configurations {
     dependencies {
 
 
-
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    //implementation 'org.springframework.boot:spring-boot-starter-web'
     compile("org.springframework.boot:spring-boot-starter-web") 
     testCompile("org.springframework.boot:spring-boot-starter-test")
 
@@ -67,6 +68,8 @@ configurations {
     compileOnly 'org.projectlombok:lombok'
     compile 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+    //developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
 
 
 }
