--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -71,6 +71,7 @@ configurations {
     compile ("org.springframework.data:spring-data-jpa:2.1.6.RELEASE")
     compile ("org.springframework.boot:spring-boot-starter-data-jpa:2.1.3.RELEASE")
     compile ("com.h2database:h2:1.4.197")
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
 
     compileOnly 'org.projectlombok:lombok'
     compile 'org.projectlombok:lombok'
