--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -60,23 +60,25 @@ configurations {
 
 
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    //implementation 'org.springframework.boot:spring-boot-starter-web'
-    compile("org.springframework.boot:spring-boot-starter-web") 
-    testCompile("org.springframework.boot:spring-boot-starter-test")
-
-    //compile("org.springframework.boot:spring-boot-starter-data-jpa")
-    //compile("org.springframework.boot:spring-boot-starter-data-jpa")
-    //compile("com.h2database:h2")
-    compile ("org.springframework.boot:spring-boot-starter-validation")
-    compile ("org.springframework.data:spring-data-jpa:2.1.6.RELEASE")
-    compile ("org.springframework.boot:spring-boot-starter-data-jpa:2.1.3.RELEASE")
-    compile ("com.h2database:h2:1.4.197")
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
 
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
+
+    compile 'org.springframework.data:spring-data-jpa:2.1.6.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa:2.1.3.RELEASE'
+    compile 'com.h2database:h2:1.4.197'
+
+    //lombok per getters / setters / constructors
     compileOnly 'org.projectlombok:lombok'
     compile 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-    //developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+
+
 }
 
 
