--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -1,10 +1,10 @@
 buildscript {
     repositories {
-      maven { url 'https://repo.spring.io/milestone' }
-      maven { url "https://plugins.gradle.org/m2/"}
-      maven { url "https://jcenter.bintray.com" }
+        maven { url 'https://repo.spring.io/milestone' }
+        maven { url "https://plugins.gradle.org/m2/"}
+        maven { url "https://jcenter.bintray.com" }
 
-      mavenCentral()
+        mavenCentral()
     }
     dependencies {
         classpath('org.springframework.boot:spring-boot-gradle-plugin:2.2.1.RELEASE')
@@ -36,10 +36,10 @@ repositories {
 }
 
 
-    sourceCompatibility = 13
-    targetCompatibility = 13
+sourceCompatibility = 13
+targetCompatibility = 13
 //compileJava {
-    //options.compilerArgs += ['-parameters', '-g']
+//options.compilerArgs += ['-parameters', '-g']
 //}
 
 //Pel lombok
@@ -56,7 +56,7 @@ configurations {
 }
 
 
-    dependencies {
+dependencies {
 
 
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
@@ -68,9 +68,9 @@ configurations {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 
-    compile 'org.springframework.data:spring-data-jpa:2.1.6.RELEASE'
-    compile 'org.springframework.boot:spring-boot-starter-data-jpa:2.1.3.RELEASE'
-    compile 'com.h2database:h2:1.4.197'
+    implementation 'org.springframework.data:spring-data-jpa:2.1.6.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.1.3.RELEASE'
+    implementation 'com.h2database:h2:1.4.197'
 
     //lombok per getters / setters / constructors
     compileOnly 'org.projectlombok:lombok'
