Ja es pot tornar a fer el run de la imatge docker, es crea un directori logs desde el Dockerfile i se li donene els permisos corrsponents

--- a/complete/Dockerfile
+++ b/complete/Dockerfile
@@ -1,11 +1,26 @@
+###################################################################
+# Recordar cada cop que fem una nova imatge fer primer:
+# > cd gs-spring-boot-docker/complete
+# > ./gradlew assemble
+# > mkdir -p build/dependency && (cd build/dependency; jar -xf ../libs/*.jar)
+# > sudo docker build --build-arg DEPENDENCY=build/dependency -t mbatet/gs-spring-boot-docker:versionXX.YY .
+# > sudo docker run -p 8081:8080 -t mbatet/gs-spring-boot-docker:versionXX.YY
+# Anar a http://localhost:8081/
+###################################################################
+
 #FROM openjdk:8-jdk-alpine
 # ALPINE
 # Alpine Linux. This is the distribution that Docker uses by default to build its packages. Alpine wasn’t designed specifically for hosting containers, but its small footprint and focus on security make it a good fit.
 FROM azul/zulu-openjdk-alpine:13 as jdk
 # UBUNTU
-#FROM azul/zulu-openjdk:13 as jdk
+# FROM azul/zulu-openjdk:13 as jdk
 RUN addgroup -S spring && adduser -S spring -G spring
+RUN mkdir complete
+RUN chown spring:spring complete
 USER spring:spring
+RUN mkdir complete/logs
+#RUN chown spring:spring ./complete/logs
+#RUN mkdir ~/logs
 ARG DEPENDENCY=target/dependency
 COPY ${DEPENDENCY}/BOOT-INF/lib /app/lib
 COPY ${DEPENDENCY}/META-INF /app/META-INF
