--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -1,8 +1,8 @@
 buildscript {
     repositories {
+        maven { url "https://jcenter.bintray.com" }
         maven { url 'https://repo.spring.io/milestone' }
         maven { url "https://plugins.gradle.org/m2/"}
-        maven { url "https://jcenter.bintray.com" }
 
         mavenCentral()
     }
@@ -58,15 +58,20 @@ configurations {
 
 dependencies {
 
+    //compile 'org.awaitility:awaitility:3.1.2'
 
+    implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
 
+
+    testImplementation 'org.awaitility:awaitility:3.1.2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+
 
     implementation 'org.springframework.data:spring-data-jpa:2.1.6.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.1.3.RELEASE'
