hem afegit la propietat
server:
  servlet:
    context-path: /demoapp

--- a/complete/src/main/resources/application.yml
+++ b/complete/src/main/resources/application.yml
@@ -20,7 +20,10 @@ endpoints:
 
 server:
   port: 8080
+  servlet:
+    #Spring Boot, by default, serves content on the root context path (“/”).
+    context-path: /demoapp
 
 spring:
   application:
-    name: helloDocker
+    name: demoapp
