--- a/complete/src/main/resources/application.yml
+++ b/complete/src/main/resources/application.yml
@@ -7,6 +7,48 @@
 #  url: jdbc:h2:mem:testDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
 #  username: sa
 
+spring:
+  application:
+    name: demoapp
+  jpa:
+    hibernate:
+      ddl-auto: update
+  datasource:
+    url: jdbc:h2:mem:default;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    driverClassName: org.h2.Driver
+    username: sa
+    password: ""
+
+#    repository-package: hello.repository
+#    default:
+#      jpa:
+#        package-to-scan:
+#          - 'hello' # <1>
+#        hibernate.ddl-auto: update
+#        properties:
+#          hibernate:
+#            hbm2ddl:
+#              auto: update
+#            show_sql: true
+#            dialect: H2
+#            bytecode:
+#              provider: none
+
+
+
+#jpa:
+#  default:
+#    package-to-scan:
+#      - 'hello' # <1>
+#
+#    properties:
+#      hibernate:
+#        hbm2ddl:
+#          auto: update
+#        show_sql: true
+#        dialect: H2
+#        bytecode:
+#          provider: none
 endpoints:
   health:
     sensitive: false
@@ -24,6 +66,4 @@ server:
     #Spring Boot, by default, serves content on the root context path (“/”).
     context-path: /demoapp
 
-spring:
-  application:
-    name: demoapp
+
