--- a/complete/src/main/resources/application.yml
+++ b/complete/src/main/resources/application.yml
@@ -1,11 +1,8 @@
-#dataSource:
-#  dbCreate: update
-#  driverClassName: org.h2.Driver
-#  logSql: true
-#  loggingSql: true
-#  password: sa
-#  url: jdbc:h2:mem:testDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
-#  username: sa
+server:
+  port: 8080
+  servlet:
+    #Spring Boot, by default, serves content on the root context path (“/”).
+    context-path: /demoapp
 
 spring:
   application:
@@ -13,42 +10,16 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+      show_sql: true
+      dialect: H2
   datasource:
     url: jdbc:h2:mem:default;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     driverClassName: org.h2.Driver
     username: sa
     password: ""
 
-#    repository-package: hello.repository
-#    default:
-#      jpa:
-#        package-to-scan:
-#          - 'hello' # <1>
-#        hibernate.ddl-auto: update
-#        properties:
-#          hibernate:
-#            hbm2ddl:
-#              auto: update
-#            show_sql: true
-#            dialect: H2
-#            bytecode:
-#              provider: none
 
 
-
-#jpa:
-#  default:
-#    package-to-scan:
-#      - 'hello' # <1>
-#
-#    properties:
-#      hibernate:
-#        hbm2ddl:
-#          auto: update
-#        show_sql: true
-#        dialect: H2
-#        bytecode:
-#          provider: none
 endpoints:
   health:
     sensitive: false
@@ -60,10 +31,6 @@ endpoints:
 #ribbon:
 #  ServerListRefreshInterval: 1000
 
-server:
-  port: 8080
-  servlet:
-    #Spring Boot, by default, serves content on the root context path (“/”).
-    context-path: /demoapp
+
 
 
