devtools, ojo, m'ha funcoinat a mitjes...

--- a/complete/src/main/resources/application.yml
+++ b/complete/src/main/resources/application.yml
@@ -17,10 +17,14 @@ spring:
     driverClassName: org.h2.Driver
     username: sa
     password: ""
+  devtools:
+    restart:
+      exclude: static/**
+#    remote:
+#      debug:
+#        local-port: 8010
+      trigger-file: MainController.java
 
-
-
-endpoints:
   health:
     sensitive: false
   restart:
