--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -42,25 +42,45 @@ targetCompatibility = 13
 //options.compilerArgs += ['-parameters', '-g']
 //}
 
-//Pel lombok
 configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
-
-    /*
     developmentOnly
     runtimeClasspath {
         extendsFrom developmentOnly
-    }*/
+    }
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
 }
 
 
 dependencies {
 
+
+    /**
+     *
+     * Devtools:
+     * Cal afegir la dependencia, i hauria d'apareixer el missatge "LiveReload server is running on port" al reiniciar la app
+     * https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#using-boot-devtools-restart
+     * PERO OJO, A L'INTELLIJ PER DEFECTE NO FUNCIONARÀ:
+     * LLEGIR: https://stackoverflow.com/questions/33869606/intellij-15-springboot-devtools-livereload-not-working
+     *
+     * Sol 1 (a mi no m'ha funcionat, però ho veuria millor opció si anés):
+     *  - In your intellij IDEA go to: file->settings->Build,execution,deployment. Go to ->Compiler->build project automatically.
+     *  - In your intellij IDEA: SHIFT+Ctrl+A -> Type "Registry" -> check de option "compiler.automake.allow.when.app.running"
+     *
+     * Sol 2 (el que a mi m'ha funcionat):
+     *  - run app debug mode and press Ctrl + f9 (short-cut for build)
+     *
+    */
+
+    developmentOnly("org.springframework.boot:spring-boot-devtools")
+
+
+
+
     //compile 'org.awaitility:awaitility:3.1.2'
 
-    //compile 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -79,6 +99,7 @@ dependencies {
     //implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.1.3.RELEASE'
     //implementation 'com.h2database:h2:1.4.197'
 
+    //TODO: No em funciona en els test (si al executar però al esciure'ls)??
     //lombok per getters / setters / constructors
     compileOnly 'org.projectlombok:lombok'
     compile 'org.projectlombok:lombok'
